@@ -18,6 +18,11 @@ JCM converted "na" "sv_unref" to PL_ namespace.
       for details on what has changed.
 !JCM changed ars_GetCharMenu so that {'menuType'} is returned
       as a string (decoded) instead of an integer.
+JCM added patch submitted by Geoff Endresen which enabled decoding
+    of push fields actions in GetFilter()
+JCM enhanced Makefile.PL to be more intelligent when h2ph fails or
+    doesnt exist
+JCM added/decoded schemaType (within GetSchema()/CompoundSchema structure)
 
 released=2/17/00 version=1.67
 JCM  ars_SetServerPort() added
