@@ -19,7 +19,7 @@ This HASH structure is returned by function
  "indexList"            =&gt; <i>list</i> of references to <A href="ds_is.html">Index Structure</a>
  "lastChanged"          =&gt; string,
  "owner"                =&gt; string,
- "schema"               =&gt; reference to hash,
+ "schema"               =&gt; reference to <a href="ds_schematype.html">schemaType</a> hash, (<B>3.x and above</B>)
  "sortList"             =&gt; <i>list</i>,
  "timestamp"            =&gt; integer
 }
